cicd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sps-embedding-be
  labels:
    app: sps-embedding
    component: backend
spec:
  selector:
    matchLabels:
      app: sps-embedding
      component: backend
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sps-embedding
        component: backend
    spec:
      containers:
      - name: fastapi
        image: 645459369268.dkr.ecr.eu-central-1.amazonaws.com/mt-emea-sps-embedding-be:v6504587713
        ports:
        - containerPort: 8000
